--- a/src/App.css
+++ b/src/App.css
@@ -51,8 +51,9 @@ button {
     padding: 10px 20px;
     margin: 10px;
     font-size: 16px;
+    font-weight: bold;
     background-color: #3cd7d9;
-    color: white;
+    color: #12273F;
     border: none;
     border-radius: 0px;
     cursor: pointer;
